MCA Dev/src/objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bank_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Same_as_Biz_Home_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Same as Biz/Home Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Balance_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Average Daily Balance N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Balance__c</fullName>
        <label>Avg. Daily Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Name_Same_as_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business/Owner Name Same as App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Request__c</fullName>
        <description>user can enter a quick note related to each record (e.g. “Missing Page 2” or “Need the NSF info” or “Need Transfer amounts”)</description>
        <label>Data Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deposits_Minus_Transfers__c</fullName>
        <formula>Deposits__c  -  Transfers_Disallowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposits Minus Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposits__c</fullName>
        <label>$ Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Include_in_average__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matching_App__c</fullName>
        <formula>IF( AND(Business_Owner_Name_Same_as_App__c = True, Address_Same_as_Biz_Home_Address__c = True),&apos;Yes&apos;,&apos;No&apos; )</formula>
        <label>Matching App?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Date__c</fullName>
        <formula>TODAY()-DAY(TODAY())+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>01 - January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 - September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Deposits__c</fullName>
        <formula>Deposits__c -  Transfers_Disallowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Deposits__c</fullName>
        <label># Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_NSFs_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Number of NSFs N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_NSFs__c</fullName>
        <label># NSFs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Negative_Days_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Number of Negative Days N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Negative_Days__c</fullName>
        <description>To count number of negative days.</description>
        <inlineHelpText>To count number of negative days.</inlineHelpText>
        <label># NDBs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Omit_From_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omit From Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statement_Month_Text__c</fullName>
        <description>A formula field that combines the Year and Month field. Used for referencing.</description>
        <formula>TEXT(Year__c) + &quot;.&quot; + TEXT(Month__c)</formula>
        <inlineHelpText>The month and year of the statement.</inlineHelpText>
        <label>Statement Month Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Month__c</fullName>
        <description>The month and year of the statement. Used for reporting.</description>
        <formula>DATE( VALUE(TEXT(Year__c)) , VALUE(LEFT(TEXT(Month__c),2)), 1)</formula>
        <inlineHelpText>The month and year of the statement. Used for reporting.</inlineHelpText>
        <label>Statement Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sys_Bank_Name__c</fullName>
        <formula>Bank_Name__r.Name</formula>
        <label>Sys Bank Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestMultiselectpicklist__c</fullName>
        <label>TestMultiselectpicklist</label>
        <picklist>
            <picklistValues>
                <fullName>drg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ghfd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fgf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jfvhj</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Transfers_Disallowed__c</fullName>
        <label>Transfers / Disallowed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bank Statement</label>
    <listViews>
        <fullName>Test</fullName>
        <columns>Bank_Name__c</columns>
        <columns>NAME</columns>
        <columns>Deposits__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>